# Jobify

./: .gitignore  README.md  pyproject.toml  pytest.ini  test_api_connection.py  test_cleanup_endpoint.py  test_cleanup_video_endpoint.py  test_django_apis.py
ChatWaifu_Mobile/: version.gradle
ChatWaifu_Mobile/app/: build.gradle
ChatWaifu_Mobile/app/src/main/: AndroidManifest.xml
ChatWaifu_Mobile/app/src/main/res/anim/: fade_in_out.xml  (+2 more)
backend/: manage.py  requirements.txt  reset_db.sh
backend/accounts/: backends.py  decorators.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/interview/: admin.py  models.py  multi_agent.py  serializers.py  test_basic.py  urls.py  utils.py  video.py  views.py
backend/interview/models/: __init__.py  interview_session.py  video.py
backend/jobify_backend/: __init__.py  asgi.py  logger.py  settings.py  urls.py  wsgi.py
backend/resume/: admin.py  debug.py  models.py  tests.py  urls.py  utils.py  views.py
backend/test/: README.md  test_api_integration.py  test_integration.py  test_interview_flow.py  test_resume_flow.py
backend/test/fixtures/: generate_resumes.py
docs/: API_TESTING_README.md  apis.md  backend.md  cleanup_endpoint_security.md  cleanup_video_endpoint_security.md  knowledge-graph.md
graphrag-api/: api.py  config.py
graphrag-api/graphrag/openl/: settings.yaml
graphrag-api/graphrag/openl/cache/community_reporting/: chat_create_community_report_05c794cc74ec0af73e48750c175fe4832c4d86aee3e35b2a760b0c43aca6c4c0_v2  chat_create_community_report_0860c77f62f2d5d0bf4027e4f57d0d1d1894fc68b24eae27a37f21bb4f3d3c4c_v2  chat_create_community_report_2013a70d25062a5827a3e9d443368eb2caa4e12371cba3358a76d68ff157e9cd_v2  chat_create_community_report_38024042104651881440166b5b38691642b718fc56f89683aa08d4d9a5295b90_v2  (+4 more)
graphrag-api/graphrag/openl/input/: news.txt
graphrag-api/graphrag/openl/logs/: logs.json
graphrag-api/graphrag/openl/output/: communities.parquet  community_reports.parquet  documents.parquet  entities.parquet  relationships.parquet  stats.json  text_units.parquet
(+115 files in other folders)
